--- a/app.html
+++ b/app.html
@@ -4,7 +4,10 @@
 <head>
   <meta charset="UTF-8">
   <title>Daily Draggable</title>
-  
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.js"></script>
+  <script src="https://rawgit.com/moment/moment/2.2.1/min/moment.min.js"></script>
+  <script src="app.js"></script>
   
   
   <link rel="stylesheet" href="css/style.css">
@@ -17,6 +20,12 @@
   <div class="recipe">
     <div class="recipe__info">
 
+            <td class="recipe-table__cell">
+              DAT: <input type="text" id="countDown" class="recipe__text-field"></td>
+            <br>
+              TTT: <input type="text" id="totalTaskTime" class="recipe__text-field"></td>
+
+<br></br>
 
     </div>
     <div class="recipe__ingredients">
@@ -25,10 +34,7 @@
 
           <tr>
             <td class="drag-handler"></td>
-
-            <td class="recipe-table__cell">
-              <input type="text" class="recipe__text-field" value="" placeholder="priority"></td>
-
+            
               <td class="recipe-table__cell">
                 <input type="text" class="recipe__text-field" value="" placeholder="item"></td>
 
@@ -53,27 +59,25 @@
               <tr>
                 <td class="drag-handler"></td>
 
-                <td class="recipe-table__cell">
-                  <input type="text" class="recipe__text-field" value="" placeholder="priority"></td>
-
+                
                   <td class="recipe-table__cell">
                     <input type="text" class="recipe__text-field" value="" placeholder="item"></td>
 
                     <td class="recipe-table__cell">
                       <input type="text" class="recipe__text-field" value="" placeholder="time estimate"></td>
 
-                      <td class="recipe-table__cell">
-                        <input type="text" class="recipe__text-field" value="" placeholder="due"></td>
-
                         <td class="recipe-table__cell">
-                          <button class="recipe-table__del-row-btn">x</button></td>
-                        </tr>
+                          <input type="text" class="recipe__text-field" value="" placeholder="due"></td>
 
-                      </script>
-                      <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.2/jquery.min.js'></script>
-                      <script src='https://rubaxa.github.io/Sortable/Sortable.js'></script>
+                          <td class="recipe-table__cell">
+                            <button class="recipe-table__del-row-btn">x</button></td>
+                          </tr>
 
-                      <script  src="js/index.js"></script>
+                        </script>
+                        <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.2/jquery.min.js'></script>
+                        <script src='https://rubaxa.github.io/Sortable/Sortable.js'></script>
 
-                    </body>
-                    </html>
+                        <script  src="js/index.js"></script>
+
+                      </body>
+                      </html>
