--- a/app.html
+++ b/app.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.js"></script>
   <script src="https://rawgit.com/moment/moment/2.2.1/min/moment.min.js"></script>
-  <script src="app.js"></script>
+  <script src="countdown.js"></script>
   
   
   <link rel="stylesheet" href="css/style.css">
@@ -76,8 +76,7 @@
                         </script>
                         <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.2/jquery.min.js'></script>
                         <script src='https://rubaxa.github.io/Sortable/Sortable.js'></script>
-
-                        <script  src="js/index.js"></script>
+                        <script src='todolist.js'></script>
 
                       </body>
                       </html>
