--- a/app.html
+++ b/app.html
@@ -20,9 +20,9 @@
     <div class="recipe__info">
 
         <td class="recipe-table__cell">
-            Till Sleep: <input type="text" id="countDown" class="recipe__text-field"></td>
+            Till Sleep: <input type="text" id="countDown" class="countDown"></td>
         <br>
-        TTT: <input type="text" id="totalTaskTime" class="recipe__text-field"></td>
+        TTT: <input type="text" id="totalTaskTime" class="totalTaskTime"></td>
 
         <br></br>
 
