color changes on countdown

--- a/app.html
+++ b/app.html
@@ -20,9 +20,9 @@
     <div class="recipe__info">
 
         <td class="recipe-table__cell">
-            Till Sleep: <input type="text" id="countDown" class="countDown"></td>
+            <input type="text" id="countDown" class="countDown"></td>
         <br>
-        TTT: <input type="text" id="totalTaskTime" class="totalTaskTime"></td>
+        <input type="text" id="totalTaskTime" class="totalTaskTime"></td>
 
         <br></br>
 
@@ -38,7 +38,8 @@
                     <input type="text" class="recipe__text-field" value="" placeholder="item"></td>
 
                 <td class="recipe-table__cell">
-                    <input type="text" class="recipe__text-field taskTimeEstimate" value="" placeholder="time estimate"></td>
+                    <input type="text" class="recipe__text-field taskTimeEstimate" value="" placeholder="time estimate">
+                </td>
 
                 <td class="recipe-table__cell">
                     <input type="text" class="recipe__text-field" value="" placeholder="due"></td>
