--- a/app.html
+++ b/app.html
@@ -8,6 +8,10 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.js"></script>
     <script src="https://rawgit.com/moment/moment/2.2.1/min/moment.min.js"></script>
     <script src="countdown.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
+
+
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
 
 
     <link rel="stylesheet" href="css/style.css">
@@ -15,18 +19,18 @@
 
 
 <body>
+<div class="recipe__info tasktime">
+    <table class="table countdownTable">
+        <tr>
+            <td><input type="text" id="totalTaskTime" class="totalTaskTime"></td>
+            <td class="recipe-table__cell">
+                <input type="text" id="countDown" class="countDown"></td>
+        </tr>
+    </table>
 
-<div class="recipe">
-    <div class="recipe__info">
+</div>
+<div class="recipe tasks">
 
-        <td class="recipe-table__cell">
-            <input type="text" id="countDown" class="countDown"></td>
-        <br>
-        <input type="text" id="totalTaskTime" class="totalTaskTime"></td>
-
-        <br></br>
-
-    </div>
     <div class="recipe__ingredients">
         <table cellpadding="0" cellspacing="0" border="0" class="recipe-table" id="recipeTable">
             <tbody id="recipeTableBody">
@@ -35,16 +39,11 @@
                 <td class="drag-handler"></td>
 
                 <td class="recipe-table__cell">
-                    <input type="text" class="recipe__text-field" value="" placeholder="item"></td>
+                    <input type="text" class="recipe__text-field" value="" placeholder="task description..."></td>
 
                 <td class="recipe-table__cell">
-                    <input type="text" class="recipe__text-field taskTimeEstimate" value="" placeholder="time estimate">
-                </td>
-
-                <td class="recipe-table__cell">
-                    <input type="text" class="recipe__text-field" value="" placeholder="due"></td>
-
-                <td class="recipe-table__cell">
+                    <input type="text" class="recipe__text-field taskTimeEstimate" value=""
+                           placeholder="time estimate...">
                     <button class="recipe-table__del-row-btn">x</button>
                 </td>
             </tr>
@@ -62,15 +61,12 @@
 
 
         <td class="recipe-table__cell">
-            <input type="text" class="recipe__text-field " value="" placeholder="item"></td>
+            <input type="text" class="recipe__text-field " value="" placeholder="task description..."></td>
 
         <td class="recipe-table__cell">
-            <input type="text" class="recipe__text-field  taskTimeEstimate" value="" placeholder="time estimate"></td>
+            <input type="text" class="recipe__text-field  taskTimeEstimate" value="" placeholder="time estimate...">
 
-        <td class="recipe-table__cell">
-            <input type="text" class="recipe__text-field" value="" placeholder="due"></td>
 
-        <td class="recipe-table__cell">
             <button class="recipe-table__del-row-btn">x</button>
         </td>
     </tr>
