--- a/setup.html
+++ b/setup.html
@@ -6,7 +6,7 @@
     <title>Monsin</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.js"></script>
     <script src="https://rawgit.com/moment/moment/2.2.1/min/moment.min.js"></script>
-    <script src="setup.js"></script>
+    <script src="js/setup.js"></script>
 
 </head>
 <body>
