--- a/app.html
+++ b/app.html
@@ -5,10 +5,11 @@
     <meta charset="UTF-8">
     <title>Daily Draggable</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
+
     <script src="js/jquery-3.3.1.min.js"></script>
     <script src="https://rawgit.com/moment/moment/2.2.1/min/moment.min.js"></script>
     <script src='https://rubaxa.github.io/Sortable/Sortable.js'></script>
+    <script src="js/bootstrap.min.js"></script>
     <script src="js/countdown.js"></script>
     <script src='js/todolist.js'></script>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
