--- a/app.html
+++ b/app.html
@@ -12,24 +12,63 @@
     <script src="js/bootstrap.min.js"></script>
     <script src="js/countdown.js"></script>
     <script src='js/todolist.js'></script>
+    <script src="js/setup.js"></script>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
 
 
 <body>
+
+<!-- Modal -->
+<div class="modal fade" id="myModal" role="dialog">
+    <div class="modal-dialog">
+
+        <!-- Modal content-->
+        <div class="modal-content">
+            <div class="modal-header1">
+                <button type="button" class="close" data-dismiss="modal">&times;</button>
+                <h4 class="modal-title">Modal Header</h4>
+            </div>
+            <div class="modal-body">
+                Hours<input type="number" id="sleepHours" placeholder="hours">
+                Minutes<input type="number" id="sleepMinutes" placeholder="minutes" min=1 max=59>
+                <br>
+                Wakeup?<input type="time" id="wakeupTime">
+                <br>
+                Sleep Prep?
+                <input type="radio" name="sleepPrep" value="1">Yes
+                <input type="radio" name="sleepPrep" value="0">No
+                <br>
+                Essentials
+                <input type="number" id="essentialHours">
+                <input type="number" id="essentialMinutes">
+                <br>
+                <input type="submit" id="submitBtn" value="Submit" />
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+            </div>
+        </div>
+
+    </div>
+</div>
+
 <div class="container-fluid">
 
     <div class="topSection table-responsive-sm" align="center">
-        <table class="table">
-            <tr>
-                <td><input type="text" id="totalTaskTime" class="totalTaskTime" ></td>
-                <td>
-                    <input type="text" id="countDown" class="countDown" readonly></td>
-            </tr>
-        </table>
+        <div class="row">
+            <div class="col-xs-2">
+                <input type="text" id="totalTaskTime" class="totalTaskTime" >
+            </div>
+                <div class="col-xs-2" style="float:left">
+                    <input type="text" id="countDown" class="countDown" readonly>
+                </div>
+        </div>
 
     </div>
+
+
 
 
     <div class="todoListContainer" align="center">
@@ -58,6 +97,8 @@
         <div class="addRow">
             <span class="addRowButton">+</span>
         </div>
+        <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal">Open Modal</button>
+
     </div>
 
     <script id="rowTemplate" type="text/template">
@@ -82,5 +123,7 @@
         </tr>
     </script>
 </div>
+
+
 </body>
 </html>
